Fix horizontal scrolling slop on the mobile header.

--- a/src/app/inventory/StoreBucket.scss
+++ b/src/app/inventory/StoreBucket.scss
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: row;
   flex: 1;
+  box-sizing: border-box;
 
   > div {
     white-space: normal;
@@ -27,7 +28,7 @@
   }
 
   &.not-equippable {
-    padding-left: 5px;
+    padding-left: 4px;
   }
 
   // Subclasses
