--- a/src/app/inventory/Stores.scss
+++ b/src/app/inventory/Stores.scss
@@ -122,8 +122,8 @@
 }
 .dim-button.bucket-button {
   align-self: center;
-  margin-top: 8px;
-  background-color: #222;
+  margin-bottom: 8px;
+  background-color: black;
   &:hover {
     background-color: #666;
   }
